# shaink

./: .env.sample  README.md  demo.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
tools/: config.py
tools/video/: main.py
