[tool.poetry]
name = "shaink"
version = "0.1.0"
description = ""
authors = ["Matthew McGrath <matthew.mcgrath12@gmail.com>"]
readme = "README.md"
packages = [{ include = "tools" }]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
google-api-python-client = "^2.137.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
