[tool.poetry]
name = "shaink"
version = "0.1.0"
description = ""
authors = ["Matthew McGrath <matthew.mcgrath12@gmail.com>"]
readme = "README.md"
packages = [{ include = "tools" }]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
google-api-python-client = "^2.137.0"

[tool.poetry.scripts]
main = "main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
